prod/kubernetes/nginx-ingress/prod-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abc-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "www.adityabirlacapital.com"
    http:
      paths:
      - pathType: Prefix
        path: "/abc-login"
        backend:
          service:
            name: abc-prod-login
            port:
              number: 8080
      - pathType: Prefix
        path: "/abc-healthinsurance"
        backend:
          service:
            name: abc-prod-healthinsurance
            port:
              number: 8080
      - pathType: Prefix
        path: "/abc-termplan"
        backend:
          service:
            name: abc-prod-termplan
            port:
              number: 8080
      - pathType: Prefix
        path: "/businessloan"
        backend:
          service:
            name: abc-prod-businessloan
            port:
              number: 8080
      - pathType: Prefix
        path: "/abc-customer"
        backend:
          service:
            name: abc-prod-customer
            port:
              number: 8080
      - pathType: Prefix
        path: "/homeloan"
        backend:
          service:
            name: abc-prod-homeloan 
            port:
              number: 8080
      - pathType: Prefix
        path: "/abc-life-insurance-child-plan"
        backend:
          service:
            name: abc-prod-life-insurance-child-plan
            port:
              number: 8080
      - pathType: Prefix
        path: "/abc-life-insurance-quiz"
        backend:
          service:
            name: abc-prod-life-insurance-quiz
            port:
              number: 8080
      - pathType: Prefix
        path: "/abc-pl-customer"
        backend:
          service:
            name: abc-prod-pl-customer
            port:
              number: 8080
      - pathType: Prefix
        path: "/saveRetirementUlip-plan"
        backend:
          service:
            name: abc-prod-saveretirementulip-plan
            port:
              number: 8080
      - pathType: Prefix
        path: "/abc-compound-calculator"
        backend:
          service:
            name: abc-prod-compound-calculator
            port:
              number: 8080     
      - pathType: Prefix
        path: "/abc-account"
        backend:
          service:
            name: abc-prod-account
            port:
              number: 8080
      - pathType: Prefix
        path: "/commonservice"
        backend:
          service:
            name: abc-prod-commonservice
            port:
              number: 8080
      - pathType: Prefix
        path: "/abc-credit-vas"
        backend:
          service:
            name: abc-prod-credit-vas
            port:
              number: 8080
      - pathType: Prefix
        path: "/abc-health-insurance-calculator"
        backend:
          service:
            name: abc-prod-health-insurance-calculator
            port:
              number: 8080
      - pathType: Prefix
        path: "/abc-kyc"
        backend:
          service:
            name: abc-prod-kyc
            port:
              number: 8080
      - pathType: Prefix
        path: "/oneabc-loan-generation"
        backend:
          service:
            name: abc-prod-loan-generation
            port:
              number: 8080
      - pathType: Prefix
        path: "/loandisbursal"
        backend:
          service:
            name: abc-prod-loandisbursal
            port:
              number: 8080
      - pathType: Prefix
        path: "/mutualfund"
        backend:
          service:
            name: abc-prod-mutualfund
            port:
              number: 8080
      - pathType: Prefix
        path: "/prefill-customer"
        backend:
          service:
            name: abc-prod-prefill-customer
            port:
              number: 8080
